--- a/index.html
+++ b/index.html
@@ -1,55 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Yogesh | Senior Data Engineer</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yogesh Murugan | Senior Data Engineer</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-    <img src="profile.jpg" alt="Yogesh's Photo" class="profile-pic">
-    <h1>Yogesh</h1>
-    <p class="tagline">Senior Data Engineer | 15+ Years of Experience</p>
+
+  <!-- 🔝 Navigation Bar -->
+  <nav class="navbar">
+    <h2>Yogesh Murugan</h2>
+    <ul>
+      <li><a href="#experience">Experience</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- 🧠 Hero Section -->
+  <header class="hero">
+    <img src="profile.jpg" alt="Yogesh Photo" class="profile-pic" />
+    <div class="hero-text">
+      <h1>Yogesh Murugan</h1>
+      <h3>Senior Data Engineer</h3>
+      <p>Delivering enterprise-scale data solutions across cloud and on-prem platforms with 13.8+ years of industry expertise.</p>
+    </div>
   </header>
 
-  <section class="highlights">
-    <div class="card" onclick="toggleDetail(this)">
+  <!-- 🌟 Highlights -->
+  <main class="highlight-section">
+    
+    <section id="experience" class="card" onclick="toggleDetail(this)">
       <h2>💼 Experience</h2>
-      <p class="brief">15+ years of data engineering across industries</p>
+      <p class="brief">13.8+ years leading complex data projects</p>
       <div class="details">
         <ul>
-          <li>XYZ Corp – Led ETL workflows, AWS migration</li>
-          <li>ABC Analytics – Built adtech pipelines, predictive models</li>
-          <li>Global Insights – Dashboards & trend analysis</li>
+          <li>Accenture (2008–2012): ETL & Reporting using Cognos, Informatica, Oracle</li>
+          <li>Cognizant (2012–Present): Cloud migration to GCP, Teradata modernization, Agile leadership, architecture design</li>
+          <li>Led transitions, support, and modernization for global apps across healthcare and agriculture domains</li>
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div class="card" onclick="toggleDetail(this)">
+    <section id="skills" class="card" onclick="toggleDetail(this)">
       <h2>🔧 Skills</h2>
-      <p class="brief">SQL, BigQuery, GCP + strong leadership</p>
+      <p class="brief">Expert in GCP, PL/SQL, Teradata, Cognos & more</p>
       <div class="details">
         <ul>
-          <li>SQL optimization & data modeling</li>
-          <li>BigQuery architecture & clustering</li>
-          <li>GCP services like Dataflow, Pub/Sub</li>
+          <li>Cloud & On-Prem: GCP (BigQuery, Dataflow), Oracle, Teradata</li>
+          <li>Languages & Tools: PL/SQL, Informatica, Java, NodeJS, Tableau, Cognos, Business Objects</li>
+          <li>OS & Utilities: Linux, Windows, FTP, UNIX</li>
+          <li>Methodologies: Agile, Scrum, Kanban</li>
+          <li>Soft Skills: Team Leadership, Strategic Problem Solving, Stakeholder Communication</li>
         </ul>
       </div>
-    </div>
+    </section>
 
-    <div class="card" onclick="toggleDetail(this)">
-      <h2>📊 Projects</h2>
-      <p class="brief">Scalable, real-time analytics systems</p>
+    <section id="education" class="card" onclick="toggleDetail(this)">
+      <h2>🎓 Education</h2>
+      <p class="brief">Academic foundation in Computer Applications</p>
       <div class="details">
         <ul>
-          <li>Retail Dashboard (Snowflake + Flask)</li>
-          <li>Customer Segmentation (PostgreSQL + Python)</li>
-          <li>ML Deployment (Docker + GCP)</li>
+          <li>BCA – VLB Janakiammal College of Arts and Science (2008)</li>
+          <li>Higher Secondary – Vasavi Vidyalaya MHSS (2005)</li>
+          <li>Matriculation – Vasavi Vidyalaya MHSS (2003)</li>
         </ul>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <section id="projects" class="card" onclick="toggleDetail(this)">
+      <h2>📊 Projects</h2>
+      <p class="brief">Enterprise apps, dashboards, migrations</p>
+      <div class="details">
+        <ul>
+          <li>LEPSI/LEGO/App Modernization: Consolidation & decommissioning post-acquisition</li>
+          <li>TD to GCP: End-to-end Teradata warehouse migration to Google Cloud</li>
+          <li>Comm. Apps Dev – Team YNot: Agile app enhancements for North America</li>
+          <li>RADAR DWH: Forecasting & monitoring healthcare devices using MSBI</li>
+          <li>Consumer Care Reporting: Global call analytics with Cognos & Informatica</li>
+        </ul>
+      </div>
+    </section>
+
+  </main>
+
+  <!-- 📫 Contact -->
+  <footer id="contact">
+    <p>📧 <a href="mailto:m.yogeshh@gmail.com">m.yogeshh@gmail.com</a></p>
+    <p>🔗 <a href="https://linkedin.com/in/yogesh" target="_blank">LinkedIn</a> | <a href="https://github.com/yogesh-data" target="_blank">GitHub</a></p>
+    <p>© 2025 Yogesh Murugan</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
